# tg_bot

./: README.md  cookies.txt  main.py  nixpacks.toml  pyproject.toml  replit.nix  requirements.txt  utils.py  videos.db
logs/: upload_log.xlsx  user_log_download_bot.txt
