[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-telegram-bot>=22.0",
    "telegram>=0.0.1",
    "yt-dlp>=2025.3.31",
]
